<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home" android:icon="@drawable/ic_home"
            android:title="@string/nav_item_home" />
        <item android:id="@+id/nav_calendar" android:icon="@drawable/ic_calendar"
            android:title="@string/nav_item_calendar" />
        <item android:id="@+id/nav_disease" android:icon="@drawable/ic_ambulance"
            android:title="@string/nav_item_disease" />
        <item android:id="@+id/nav_history" android:icon="@drawable/ic_history"
            android:title="@string/nav_item_history" />
        <item android:id="@+id/nav_weather" android:icon="@drawable/ic_weather"
            android:title="@string/nav_item_cuaca" />
        <item android:id="@+id/nav_logout" android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/nav_logout" />
    </group>
    <!--<item android:title="">-->
        <!--<menu>-->
            <!--<item android:id="@+id/nav_logout" android:icon="@android:drawable/ic_menu_delete"-->
                <!--android:title="@string/nav_logout" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>